2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/17_asmEtBloc.deca
// Description:
//    Programme : definition pour la même classe une méthode asm et une non
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
    protected int x;
    void get() asm (
        "hello "
    );

    int getX(){
        return x;
    }
}