2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/38_DeclMethodPrivate.deca
// Description:
//    Programme definition d'une class de visibilité private
// Resultats:
//      Programme incorrecte syntaxiquement :9:22: mismatched input '(' expecting {'=', ';', ','}
// Historique:
//    cree le 18/01/2023
class A {
    protected int x;
    private int getX()
    {
        return x;
    }
}